Added logo for twitter feed page

--- a/twitter_feed.html
+++ b/twitter_feed.html
@@ -15,8 +15,18 @@
     <title>#func2015</title>
 </head>
 
+<style>
+    body {
+        background: #333;
+        overflow: hidden;
+    }
+</style>
+
 <body>
 
+<header class="logo">
+    <a href="http://frontend-union.co/"></a>
+</header>
 
 <div id="twitter_container">
     <a class="twitter-timeline" href="https://twitter.com/hashtag/func2015" data-widget-id="636842972563304448">#func2015</a>
