--- a/twitter_feed.html
+++ b/twitter_feed.html
@@ -29,7 +29,7 @@
 </header>
 
 <div id="twitter_container">
-    <a class="twitter-timeline" href="https://twitter.com/hashtag/func2015" data-widget-id="636842972563304448">#func2015</a>
+    <a class="twitter-timeline" href="https://twitter.com/hashtag/func2015" data-widget-id="636842972563304448" data-chrome="noborders" data-chrome="noscrollbar" data-tweet-limit="5">#func2015</a>
 </div>
 
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
