Twitter feed: mobile view

--- a/twitter_feed.html
+++ b/twitter_feed.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="twitter:widgets:theme" content="dark">
     <meta name="twitter:widgets:link-color" content="#55acee">
     <meta name="twitter:widgets:border-color" content="#55acee">
