fixed styles fir widget

--- a/twitter_feed.html
+++ b/twitter_feed.html
@@ -17,9 +17,13 @@
 </head>
 
 <style>
-    body {
+    .thm-dark .customisable-border,
+    .thm-dark.customisable-border{
         background: #333;
         overflow: hidden;
+    }
+    body #twitter_container{
+        max-width: 100%;
     }
 </style>
 
