--- a/twitter_feed.html
+++ b/twitter_feed.html
@@ -34,7 +34,7 @@
 </header>
 
 <div id="twitter_container">
-    <a class="twitter-timeline" href="https://twitter.com/frontend_union" data-widget-id="637514126001049600">Tweets by @frontend_union</a>
+    <a class="twitter-timeline" href="https://twitter.com/frontend_union" data-widget-id="637514126001049600" data-chrome="noborders" data-chrome="noscrollbar" data-tweet-limit="5">Tweets by @frontend_union</a>
 </div>
 
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
